--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "cms": {
+    "CMS": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/cms",
+            "outputPath": "dist/CMS",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,7 +23,6 @@
               "src/assets"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [],
@@ -59,18 +58,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "cms:build"
+            "browserTarget": "CMS:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "cms:build:production"
+              "browserTarget": "CMS:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "cms:build"
+            "browserTarget": "CMS:build"
           }
         },
         "test": {
@@ -104,7 +103,7 @@
         }
       }
     },
-    "cms-e2e": {
+    "CMS-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -113,11 +112,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "cms:serve"
+            "devServerTarget": "CMS:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "cms:serve:production"
+              "devServerTarget": "CMS:serve:production"
             }
           }
         },
@@ -133,5 +132,5 @@
       }
     }
   },
-  "defaultProject": "cms"
+  "defaultProject": "CMS"
 }
