--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:server": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -19,8 +20,14 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^3.4.1",
+    "cookie-parser": "^1.4.4",
     "core-js": "^2.5.4",
+    "express": "^4.17.1",
+    "mongoose": "^5.6.4",
+    "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.9.1",
     "ng2-dnd": "^5.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
